2008-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic, Makefile.am, MonoDevelop.SourceEditor.addin.xml,
	  MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/DebugValueWindow.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/CompileErrorTooltipProvider.cs,
	  MonoDevelop.SourceEditor/LanguageItemTooltipProvider.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Moved tooltip
	  support to Mono.TextEditor. Implemented tooltip providers for
	  language item documentation and compilation errors.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Track api changes.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Add add-in dependency.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  Makefile.am, MonoDevelop.SourceEditor.mdp,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Use new text markers
	  defined in MD.Debugger. Properly fire LineCountChanged event.

2008-06-26  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Don't add folding
	  regions for one-line classes, properties and methods.

2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug 402368 -
	  SourceEditorWidget+Error.RemoveFromLine throws uncaught exception'

2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs,
	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Added tab to
	  reindent option.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Moved logic for